Tweaking shell configs

--- a/.config/bash/bash-functions.cfg
+++ b/.config/bash/bash-functions.cfg
@@ -45,3 +45,10 @@ last_status() {
         echo '31'
     fi
 }
+current_git_branch_name() {
+  git branch 2> /dev/null | sed -e '/^[^*]/d' -e 's/* \(.*\)/\1/' || exit 1
+}
+function trunk_whitespace() {
+ find . -type f -name "*.${TRUNK_EXT}" -exec sed -E -i.bak "s/[[:space:]]+$//" {} \; && find . -type f -name '*.bak' -exec rm {} \;
+}
+
