--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/bundle/vim-sunburst"]
 	path = .vim/bundle/vim-sunburst
 	url = https://github.com/sickill/vim-sunburst.git
+[submodule ".vim/bundle/vim-ctrlp"]
+	path = .vim/bundle/vim-ctrlp
+	url = https://github.com/kien/ctrlp.vim.git
