Making tmux sane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,15 +1,13 @@
 #http://blog.hawkhost.com/2010/06/28/tmux-the-terminal-multiplexer/
 
-set -g prefix C-a
 bind-key C-a last-window
 unbind %
 bind | split-window -h
-bind - split-window -v 
+bind - split-window -v
 bind -n F2 previous-window
 bind -n F3 next-window
 
-#set -g default-terminal "screen-256color"
-
+set -g default-terminal "screen-256color"
 
 #    * Ctrl-b c Create new window
 #    * Ctrl-b d Detach current client
