--- a/.config/bash/bash-exenv.cfg
+++ b/.config/bash/bash-exenv.cfg
@@ -5,3 +5,16 @@ export PATH="$HOME/.exenv/bin:$PATH"
 
 # Inits
 eval "$(exenv init -)"
+
+# Funcs
+___exenv_ver() {
+  if which exenv >/dev/null 2>&1; then
+    exenv version | sed -e 's/ .*//'
+  else
+    elixir -V 2>&1 | cut -d \  -f 2
+  fi
+}
+___exenv_ps1() {
+  printf "\033[01;35m[ex: $(___exenv_ver)] \033[00m"
+}
+
