--- a/.config/bash/bash-pyenv.cfg
+++ b/.config/bash/bash-pyenv.cfg
@@ -3,3 +3,15 @@ export PATH="$HOME/.pyenv/bin:$PATH"
 
 # Inits
 eval "$(pyenv init -)"
+
+# Funcs
+___pyenv_ver() {
+  if which pyenv >/dev/null 2>&1; then
+    pyenv version | sed -e 's/ .*//'
+  else
+    python -V 2>&1 | cut -d \  -f 2
+  fi
+}
+___pyenv_ps1() {
+  printf "\033[01;32m[py: $(___pyenv_ver)] \033[00m"
+}
