--- a/.config/bash/bash-rbenv.cfg
+++ b/.config/bash/bash-rbenv.cfg
@@ -7,3 +7,15 @@ alias bi='bundle install'
 
 # Inits
 eval "$(rbenv init -)"
+
+# Funcs
+___rbenv_ver() {
+  if which rbenv >/dev/null 2>&1; then
+    rbenv version | sed -e 's/ .*//'
+  else
+    ruby -v 2>&1 | cut -d \  -f 2
+  fi
+}
+___rbenv_ps1() {
+  printf "\033[01;31m[rb: $(___rbenv_ver)] \033[00m"
+}
