--- a/.config/bash/git-completion.cfg
+++ b/.config/bash/git-completion.cfg
@@ -2710,3 +2710,13 @@ __git_complete gitk __gitk_main
 if [ Cygwin = "$(uname -o 2>/dev/null)" ]; then
 __git_complete git.exe __git_main
 fi
+
+___is_in_git() {
+  git rev-parse --is-inside-git-dir >/dev/null 2>&1 || git rev-parse --is-inside-work-tree >/dev/null 2>&1
+}
+
+___git_ps1() {
+  if ___is_in_git; then
+    printf "\033[01;33m[git: $(git rev-parse --abbrev-ref HEAD)] \033[00m"
+  fi
+}
