--- a/.config/bash/zzzz-prompt.cfg
+++ b/.config/bash/zzzz-prompt.cfg
@@ -6,6 +6,9 @@ ___gcc_ps1() {
 BASE16_SHELL="$HOME/.config/base16-shell/base16-default.dark.sh"
 [[ -s $BASE16_SHELL ]] && source $BASE16_SHELL
 
-export PS1='\[\033[01;34m\]\u@\h \w $(___git_ps1)$(___rbenv_ps1)$(___pyenv_ps1)$(___exenv_ps1) \n\[\033[01;37m\]\$\[\033[00m\] '
-export PS1='\[\033[01;34m\][user:\u host:\h path:\w] $(___git_ps1)$(___rbenv_ps1)$(___pyenv_ps1)$(___exenv_ps1) \n\[\033[01;37m\]\$\[\033[00m\] '
-
+if [[ "$(hostname)" =~ ^kristofer-white ]]; then
+  export PS1='[\u@\h \W]\$ '
+else
+  export PS1='\[\033[01;34m\]\u@\h \w $(___git_ps1)$(___rbenv_ps1)$(___pyenv_ps1)$(___exenv_ps1) \n\[\033[01;37m\]\$\[\033[00m\] '
+  export PS1='\[\033[01;34m\][user:\u host:\h path:\w] $(___git_ps1)$(___rbenv_ps1)$(___pyenv_ps1)$(___exenv_ps1) \n\[\033[01;37m\]\$\[\033[00m\] '
+fi
