Adding support for ndenv

--- a/.config/bash/bash-git.cfg
+++ b/.config/bash/bash-git.cfg
@@ -2717,6 +2717,6 @@ ___is_in_git() {
 
 ___git_ps1() {
   if ___is_in_git; then
-    printf "\033[01;33m[git: $(git rev-parse --abbrev-ref HEAD)] \033[00m"
+    printf " git:$(git rev-parse --abbrev-ref HEAD)"
   fi
 }
