Better version populating

--- a/.config/bash/bash-exenv.cfg
+++ b/.config/bash/bash-exenv.cfg
@@ -10,8 +10,10 @@ eval "$(exenv init -)"
 ___exenv_ver() {
   if which exenv >/dev/null 2>&1; then
     exenv version | sed -e 's/ .*//'
-  else
+  elif which elixir >/dev/null 2>&1; then
     elixir -V 2>&1 | cut -d \  -f 2
+  else
+    printf 'not-installed'
   fi
 }
 ___exenv_ps1() {
