--- a/.config/bash/bash-ndenv.cfg
+++ b/.config/bash/bash-ndenv.cfg
@@ -10,8 +10,10 @@ eval "$(ndenv init -)"
 ___ndenv_ver() {
   if which ndenv >/dev/null 2>&1; then
     ndenv version | sed -e 's/ .*//'
+  elif which node >/dev/null 2>&1; then
+    printf 'FIXME'
   else
-    echo "FIXME"
+    printf 'not-installed'
   fi
 }
 ___ndenv_ps1() {
