--- a/.config/bash/bash-rbenv.cfg
+++ b/.config/bash/bash-rbenv.cfg
@@ -12,8 +12,10 @@ eval "$(rbenv init -)"
 ___rbenv_ver() {
   if which rbenv >/dev/null 2>&1; then
     rbenv version | sed -e 's/ .*//'
-  else
+  elif which ruby >/dev/null 2>&1; then
     ruby -v 2>&1 | cut -d \  -f 2
+  else
+    printf 'not-installed'
   fi
 }
 ___rbenv_ps1() {
