--- a/.config/bash/bash-pyenv.cfg
+++ b/.config/bash/bash-pyenv.cfg
@@ -8,8 +8,10 @@ eval "$(pyenv init -)"
 ___pyenv_ver() {
   if which pyenv >/dev/null 2>&1; then
     pyenv version | sed -e 's/ .*//'
-  else
+  elif which python >/dev/null 2>&1; then
     python -V 2>&1 | cut -d \  -f 2
+  else
+    printf 'not-installed'
   fi
 }
 ___pyenv_ps1() {
