[bash] Update Environment
* Add `ls` alias
* Export Language Vars
* Prefix PS1 with newline char

--- a/.config/bash/bash-alias.cfg
+++ b/.config/bash/bash-alias.cfg
@@ -1,4 +1,5 @@
 alias vimn='vim +NERDTree'
+alias ls='ls -G'
 alias tmux='TERM=screen-256color tmux'
 alias beer='bundle exec rake'
 alias berc='bundle exec rails console'
