--- a/.config/bash/zzzz-prompt.cfg
+++ b/.config/bash/zzzz-prompt.cfg
@@ -2,4 +2,4 @@ ___gcc_ps1() {
   gcc --version | head -n 1 | cut -d \  -f 4
 }
 
-export PS1='\[\033[01;35m\][user:\u host:\h path:\w$(___git_ps1)] \n\[\033[01;37m\]\$\[\033[00m\] '
+export PS1='\n\[\033[01;35m\][user:\u host:\h path:\w$(___git_ps1)] \n\[\033[01;37m\]\$\[\033[00m\] '
