[vim] Add syntastic

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule ".vim/bundle/vim-papercolor"]
 	path = .vim/bundle/vim-papercolor
 	url = https://github.com/NLKNguyen/papercolor-theme
+[submodule ".vim/bundle/vim-syntastic.git"]
+	path = .vim/bundle/vim-syntastic.git
+	url = git@github.com:vim-syntastic/syntastic.git
