[shell] Add bash session type functions

--- a/.config/bash/shell-functions.cfg
+++ b/.config/bash/shell-functions.cfg
@@ -1,3 +1,9 @@
+is_interactive() {
+  [[ $- == *i* ]]
+}
+is_login() {
+  shopt -q login_shell
+}
 check_for_path() {
     [ -n "$1" ] || return 1
     for SUBPATH in `printf $PATH | sed 's/:/ /g'`; do
