[tmux] Enable Mouse Mode
By default, enabling mouse mode grants:
 - [x] Window Selection via Mouse
 - [x] Pane Resizing and Selection via Mouse
 - [x] Mousewheel scrolling with automatic triggering of copy-mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,8 @@ bind - split-window -v
 bind -n F2 previous-window
 bind -n F3 next-window
 
+set-option -g mouse on
+
 set -g default-terminal "screen-256color"
 
 #    * Ctrl-b c Create new window
