--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule ".vim/bundle/vim-syntastic.git"]
 	path = .vim/bundle/vim-syntastic.git
 	url = https://github.com/vim-syntastic/syntastic.git
+[submodule ".asdf"]
+	path = .asdf
+	url = https://github.com/asdf-vm/asdf.git
